--- a/zerotier_tools/zerotier_members.html
+++ b/zerotier_tools/zerotier_members.html
@@ -1,49 +1,3 @@
-#!/bin/bash
-# Usage: ./html_ip.sh <api_token> <network_id>
-# This script will then output a html file.
-
-API_TOKEN="$1"
-NETWORK_ID="$2"
-HTML_FILE="${3:-zerotier_members.html}"
-
-if [[ -z "$API_TOKEN" || -z "$NETWORK_ID" ]]; then
-  echo "Usage: $0 <API_TOKEN> <NETWORK_ID> [output_html_file]"
-  exit 1
-fi
-
-# Fetch JSON from ZeroTier API
-response=$(curl -s -H "Authorization: token $API_TOKEN" \
-  "https://my.zerotier.com/api/v1/network/$NETWORK_ID/member")
-
-if [[ -z "$response" ]]; then
-  echo "No response from API"
-  exit 2
-fi
-
-
-print_table() {
-  printf "%-22s\t%-20s\t%-20s\t%-8s\n" "NODE ID" "NAME/DESCRIPTION" "MANAGED IP(S)" "STATUS"
-  printf '%*s\n' 75 '' | tr ' ' '-'
-  threshold_ms=$(( $(date +%s) * 1000 - 300000 ))
-  
-  echo "$response" | jq -r --argjson threshold "$threshold_ms" '
-    .[] |
-    {
-      nodeId: (.nodeId // .id // ""),
-      name: (.name // .description // ""),
-      ips: (.config.ipAssignments // .config.assignedAddresses // [] | join(", ")),
-      status: (if (.lastSeen != null and .lastSeen > $threshold) then "Online" else "Offline" end)
-    } |
-    [ .nodeId, .name, .ips, .status ] | @tsv' | column -t -s $'\t'
-}
-
-output_html() {
-  local file="$1"
-  local gen_time
-  gen_time=$(date +"%Y-%m-%d %H:%M:%S %Z")
-  local threshold_ms=$(( $(date +%s) * 1000 - 300000 ))  # 5 minutes ago in ms
-
-  cat > "$file" <<EOF
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -170,11 +124,32 @@ function toggleTheme() {
   document.body.classList.toggle('dark-mode');
 }
 </script>
+<script>
+(function() {
+  // Interval in milliseconds between checks (e.g., 30 seconds)
+  const CHECK_INTERVAL = 30000;
+  // Save the current Last-Modified time
+  let lastModified = document.lastModified;
+
+  function checkForUpdate() {
+    fetch(window.location.href, { method: 'HEAD', cache: 'no-store' })
+      .then(response => {
+        const newModified = response.headers.get('Last-Modified');
+        if (newModified && newModified !== lastModified) {
+          window.location.reload(true);
+        }
+      })
+      .catch(() => {/* ignore errors */});
+  }
+
+  setInterval(checkForUpdate, CHECK_INTERVAL);
+})();
+</script>
 </head>
 <body class="dark-mode">
 <h1>ZeroTier Network Members</h1>
 <button id="toggleTheme" onclick="toggleTheme()">Switch to Light/Dark Mode</button>
-<p id="lastGenerated">Last Generated: $gen_time</p>
+<p id="lastGenerated">Last Generated: 2025-10-09 20:27:23 BST</p>
 <table>
 <thead>
 <tr>
@@ -186,74 +161,21 @@ function toggleTheme() {
 </tr>
 </thead>
 <tbody>
-EOF
-
-  echo "$response" | jq -c --argjson threshold "$threshold_ms" '.[] | {
-    nodeId: (.nodeId // .id // ""),
-    name: (.name // .description // ""),
-    ips: (.config.ipAssignments // .config.assignedAddresses // []),
-    lastSeen: .lastSeen
-  } | {
-    nodeId, name, ips, status: (if (.lastSeen != null and .lastSeen > $threshold) then "Online" else "Offline" end)
-  }' | while read -r member; do
-    nodeId=$(echo "$member" | jq -r '.nodeId')
-    name=$(echo "$member" | jq -r '.name' | sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g')
-    ips=$(echo "$member" | jq -r '.ips[]?')
-    status=$(echo "$member" | jq -r '.status')
-
-    if [[ -z "$ips" ]]; then
-      cat >> "$file" <<EOF
 <tr>
-  <td>$nodeId</td>
-  <td>$name</td>
-  <td></td>
-  <td></td>
-  <td>$status</td>
+  <td>33e9b35749</td>
+  <td>AdamM TestVM</td>
+  <td>10.147.19.141</td>
+  <td><button class="copy-btn" onclick="copyToClipboard('10.147.19.141')">Copy</button></td>
+  <td>Online</td>
 </tr>
-EOF
-    else
-      for ip in $ips; do
-        escaped_ip=$(echo "$ip" | sed 's/"/\\"/g')
-        cat >> "$file" <<EOF
 <tr>
-  <td>$nodeId</td>
-  <td>$name</td>
-  <td>$ip</td>
-  <td><button class="copy-btn" onclick="copyToClipboard('$escaped_ip')">Copy</button></td>
-  <td>$status</td>
+  <td>f74150af79</td>
+  <td>LV_VM</td>
+  <td>10.147.19.86</td>
+  <td><button class="copy-btn" onclick="copyToClipboard('10.147.19.86')">Copy</button></td>
+  <td>Offline</td>
 </tr>
-EOF
-      done
-    fi
-  done
-
-  cat >> "$file" <<EOF
 </tbody>
 </table>
-<script>
-(() => {
-  const CHECK_INTERVAL = 30000;
-  let lastModified = document.lastModified;
-
-  function checkForUpdate() {
-    fetch(window.location.href, { method: 'HEAD', cache: 'no-store' })
-      .then(response => {
-        const newModified = response.headers.get('Last-Modified');
-        if (newModified && newModified !== lastModified) {
-          window.location.reload(true);
-        }
-      })
-      .catch(console.error);
-  }
-
-  setInterval(checkForUpdate, CHECK_INTERVAL);
-})();
-</script>
-
 </body>
 </html>
-EOF
-}
-
-print_table
-output_html "$HTML_FILE"
